@@ -3,8 +3,10 @@ ocaml (3.10.0-6) UNRELEASED; urgency=low
   [ Stefano Zacchiroli ]
   * debian/ocaml-nox.dirs.in
     - avoid creating empty /usr/include/ocaml/* directory (closes: #439017)
+  * CDBS class
+    - add support for automatic ocamldoc HTML documentation generation
 
- -- Stefano Zacchiroli <zack@debian.org>  Tue, 21 Aug 2007 18:55:16 +0200
+ -- Stefano Zacchiroli <zack@debian.org>  Sat, 25 Aug 2007 20:28:29 +0200
 
 ocaml (3.10.0-5) experimental; urgency=low
 
